--- a/package.json
+++ b/package.json
@@ -41,6 +41,7 @@
     "react": "^16.3.2",
     "react-dev-utils": "^5.0.1",
     "react-dom": "^16.3.2",
+    "react-reveal": "^1.2.2",
     "react-transition-group": "^2.3.1",
     "react-waypoint": "^8.0.1",
     "resolve": "1.6.0",
