--- a/package.json
+++ b/package.json
@@ -8,7 +8,9 @@
     "lint": "vue-cli-service lint"
   },
   "dependencies": {
+    "firebase": "^5.2.0",
     "vue": "^2.5.16",
+    "vue-resource": "^1.5.1",
     "vue-router": "^3.0.1",
     "vue-scroll-reveal": "^1.0.8"
   },
